See https://github.com/halyph/mind-flow/commit/805a451837a22004e6ecc90a65b86240993b397a from refs/heads/master

--- a/css/extra.css
+++ b/css/extra.css
@@ -1,8 +1,4 @@
-/*  Navigation sidebar */
-/* .md-nav--primary {
-    display: none
-} */
-
+/*
 @media only screen and (min-width: 76.25em) {
     .md-main__inner {
         max-width: 90%;
@@ -19,3 +15,4 @@
         transform: none;
     }
 }
+*/
